Fix spacing and input resizing for View Edit Create Task Page

--- a/src/ViewEditCreateTaskPage/DatePicker.css
+++ b/src/ViewEditCreateTaskPage/DatePicker.css
@@ -9,10 +9,6 @@
   text-align: center;
 }
 
-.date-picker p {
-  font-size: 12pt;
-}
-
 /* to enable highlighting selected-month, selected-day, selected-year */
 .prev-month,
 .prev-day,
