--- a/src/ViewEditCreateTaskPage/EditTaskNameInput.css
+++ b/src/ViewEditCreateTaskPage/EditTaskNameInput.css
@@ -9,7 +9,7 @@
   overflow: hidden; /* hides textarea scrollbar */
   background: #eae8e8;
   color: #172528;
-  font-size: 15px;
+  font-size: 12pt;
   width: 70%;
   font-family: "Open Sans", Calibri, sans-serif;
   border-top-style: hidden;
