--- a/src/ViewEditCreateTaskPage/TaskDisplay.css
+++ b/src/ViewEditCreateTaskPage/TaskDisplay.css
@@ -19,7 +19,7 @@
 }
 
 .task-display-picker-closed {
-  grid-template-rows: 70px 1fr 70px 70px; /* TODO: may have to change depending on whether we add more attributes a task could have! */
+  grid-template-rows: 70px 1fr 70px; /* TODO: may have to change depending on whether we add more attributes a task could have! */
 }
 
 .set-date-icon {
