--- a/src/ViewEditCreateTaskPage/TimePicker.css
+++ b/src/ViewEditCreateTaskPage/TimePicker.css
@@ -9,10 +9,6 @@
   text-align: center;
 }
 
-.time-picker p {
-  font-size: 12pt;
-}
-
 /* to enable highlighting selected-hour, selected-minute, selected-am-pm */
 .prev-hour,
 .prev-minute,
